--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm test
 
       - name: Build Docker image
-        run: docker build -t my-node-app .
+        run: docker build -t my-node-app -f Dockerfile .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
