--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,8 +2,9 @@ name: Test and Build Container
 
 on:
   push:
-    branches:
-      - main
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   build-and-test:
