--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Build Docker image
         run: docker build -t my-node-app -f Dockerfile .
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v4
         with:
+          image: andersonaraujjoo/my-node-ap
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image
-        run: docker push my-node-ap
