--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,8 +31,9 @@ jobs:
       - name: Build and Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v4
         with:
-          image: andersonaraujjoo/my-node-ap
-          registry: docker.io
+          context: .
+          push: true
+          tags: |
+            docker.io/andersonaraujjoo/my-node-ap:latest
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
