--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,9 +31,7 @@ jobs:
       - name: Build and Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v4
         with:
-          context: .
-          push: true
-          tags: |
-            docker.io/andersonaraujjoo/my-node-ap:latest
+          image: andersonaraujjoo/my-node-ap
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
